# oz_djangosupplement

./: .gitignore  .python-version  manage.py  pyproject.toml
.github/workflows/: ci.yml
oz_django08/: settings.py  wsgi.py
oz_django08/config/: settings.py
tabom/: models.py
tabom/migrations/: 0001_initial.py  0002_like_uniqueconstraints.py
tabom/services/: like_service.py
tabom/tests/: test_like_service.py
