[project]
name = "oz-django08"
version = "0.1.0"
description = ""
authors = [
    {name = "seonhongmun",email = "mshg_@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"